# Configurations

./: Linux-ChromiumBroweser.md  README.md  ascii_logo_am.txt  asciiart.txt  bashrc.sh  gitignore_template  ssh_config_file--client.txt  sublimeTextConfigurations.json  ufw_rules.sh  vimConfiurationFile.txt  vimrc-2024.sh
GnomeTerminalThemes/: README.md
IntelliJIdea/: README.md
Linux-FirefoxRollingRelease/: README.md
LinuxConfigurations/: FirefoxRollingRelease.md  GoogleChome-noIcon-fix.md  debManuallyInstall.md
VIMconf/: readme.md  vimConfiurationFile.txt  vimDraculaTheme.txt
database_postgres_mongo_ui/: .gitignore  clean.sh  docker-compose.yml  readme.md  shutdown.sh  startup.sh
docker/: docker-image-export.txt
docker-compose-manager/: 01-dc-build.sh  02-dc-start.sh  03-dc-stop.sh  04-dc-statusall.sh  05-dc-status.sh  06-dc-shell.sh  07-dc-stopall.sh  08-dc-cleancompose.sh  09-dc-cleandocker.sh  10-dc-prestart.sh  README.md  dc-common.sh  dc-launcher.sh
docker_compose/: aliases.sh  docker-compose.yaml  mysql___docker-compose.yaml  unicompose-v3.sh
fonts/: README.md
git/: git-semi_bible-cheatsheet.md  git_cheats.md  guida-conflitti-git.md
github_personal_access_token/: README.md
vibe-coding/example/: Dockerfile  README.md  SUBAGENTS_PRACTICAL_SCENARIO.md  compose.yaml  pyproject.toml
vibe-coding/example/reports/subagents/: 00-scenario.md  01-architect.md  02-coder.md  03-analyst.md  04-dockerizer.md  05-reviewer.md  06-tester.md
vibe-coding/example/src/tinyapp/: __init__.py  cli.py  core.py
vibe-coding/example/tests/: test_core.py
(+102 files in other folders)
