[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyapp-subagents-demo"
version = "0.1.0"
description = "Very small Python app used to demo subagent workflows"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
